<?xml version="1.0" encoding="utf-8"?>

<TableLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    tools:context=".PlayerDetailFragment">

    <TableRow
        android:layout_width="fill_parent"
        android:layout_height="fill_parent">

    </TableRow>

    <TableRow
        android:layout_width="fill_parent"
        android:layout_height="fill_parent">

    </TableRow>

    <TableRow
        android:layout_width="fill_parent"
        android:layout_height="fill_parent">

    </TableRow>

    <TableRow
        android:layout_width="fill_parent"
        android:layout_height="fill_parent">

    </TableRow>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:orientation="vertical"
        android:padding="8dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/player_id"
            android:id="@+id/textView2"
            android:layout_gravity="left|center_vertical" />

        <View
            android:layout_width="fill_parent"
            android:layout_height="2dp"
            android:background="#FF909090" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="none"
            android:ems="10"
            android:id="@+id/idEdit"
            android:layout_column="0"
            android:numeric="integer"
            android:layout_gravity="left|center_vertical"
            android:hint="94...." />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/points"
            android:id="@+id/textView"
            android:layout_gravity="left|center_vertical" />

        <View
            android:layout_width="fill_parent"
            android:layout_height="2dp"
            android:background="#FF909090" />

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:ems="10"
            android:id="@+id/pointEdit"
            android:layout_column="0"
            android:numeric="integer"
            android:editable="true"
            android:hint="@string/default_points"
            android:layout_gravity="left|center_vertical" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/name"
            android:id="@+id/textView1"
            android:layout_gravity="left|center_vertical" />

        <View
            android:layout_width="fill_parent"
            android:layout_height="2dp"
            android:background="#FF909090" />

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:id="@+id/nameEdit"
            android:layout_column="0"
            android:editable="true"
            android:inputType="textCapWords|textPersonName"
            android:hint="@string/first_and_last_name" />

    </LinearLayout>

</TableLayout>